<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Palm Collect  </string>
    <string name="farmer_nmae">Grower Name</string>
    <string name="farmer_code">Grower Code</string>
    <string name="user_name_comment_tag">User name of comment</string>
    <string name="user_comment_tag">User comment</string>
    <string name="logging">Logging</string>
    <string name="will_end_measuring_session">This will end the current measuring session.</string>
    <string name="measure">Measure</string>
    <string name="save">Save</string>
    <string name="view">View</string>
    <string name="delete">Delete</string>
    <string name="help">Help</string>
    <string name="import_file">Import</string>
    <string name="export">Export</string>
    <string name="estimate_error">Estimate error</string>
    <string name="estimated_error">Estimated error</string>
    <string name="mutual_support">Mutual support</string>
    <string name="back">Back</string>
    <string name="figures">Figures</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="enter_figure_name">Enter figure name</string>
    <string name="accuracy_1m">Accuracy: 1m</string>
    <string name="accuracy_10m">Accuracy: 10m</string>
    <string name="log_details" tools:ignore="ExtraTranslation">Log Details</string>
    <string name="log_book">Log Book</string>
    <string name="client_name">Client Name* </string>
    <string name="location">Location*</string>
    <string name="running">Running</string>
    <string name="ready">Ready</string>
    <string name="awaiting_signal">Waiting For GPS signal</string>
    <string name="view_mode">View mode</string>
    <string name="units_prompt">Choose units</string>
    <string name="logging_prompt">Choose logging method</string>
    <string name="distance">Distance:</string>
    <string name="area">Area:</string>
    <string name="length_unit_meter">m</string>
    <string name="length_unit_kilometer">km</string>
    <string name="length_unit_foot">ft</string>
    <string name="length_unit_yard">yd</string>
    <string name="length_unit_chain">ch</string>
    <string name="length_unit_mile">mi</string>
    <string name="area_unit_square_meter">m\u00b2</string>
    <string name="area_unit_hectare">ha</string>
    <string name="area_unit_square_kilometermeter">km\u00b2</string>
    <string name="area_unit_square_foot">ft\u00b2</string>
    <string name="area_unit_square_yard">yd\u00b2</string>
    <string name="area_unit_acre">acre</string>
    <string name="area_unit_square_mile">mi\u00b2</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="reset">Reset</string>
    <string name="log">Log</string>
    <string name="kml">.kml</string>
    <string name="damef">.damef</string>
    <string name="export_description">Save as .kml to be able to view the files in Google earth or maps.\nSave as .damef to transfer files to another \"Distance and area measurement\"-application.\nAll files will be saved in the folder \"/Android/data/Distance and area measurement/\" on the external memory.</string>
    <string name="sendCopyByMail">Send copy by mail</string>
    <string name="translated_by"></string>
    <string name="title_activity_login_screen">LoginScreen</string>
    <string name="userid_hint">User Id</string>
    <string name="representative_hint">3F Representative</string>
    <string name="password_hint">Password</string>
    <string name="login_btn">Sign In</string>
    <string name="submit_btn">Submit</string>
    <string name="no_of_people_in_your_family">No of People in your Family ? *</string>
    <string name="person_name">Person Name </string>
    <string name="what_is_the_reason_you_have_chosen_this_particular_oil">What is the reason you have chosen this particular Oil ? *</string>
    <string name="would_you_be_willing_to_swap_to_our_brand_of_palm_oil">Would you be willing to swap to our brand of Palm Oil ? *</string>
    <string name="how_much_would_you_be_willing_to_pay_for_our_brand">How much would you be willing to pay for our Brand ?(Rs /Ltr) </string>
    <string name="do_you_use_smart_phone">Do you use Smart Phone ?</string>
    <string name="do_you_have_cattle">Do you have Cattle?</string>
    <string name="home">Market Survey and Referrals</string>
    <string name="marketSurvey">Market Survey</string>
    <string name="Collection">Collection Centre Contractor Issues</string>
    <string name="Referrals">Referrals</string>
    <string name="collection_center_issues">Are you facing any issues with Collection Centre Contractor ?</string>
    <string name="cookingOil">What type of cooking oil do you use at home ? *</string>
    <string name="appearance_of_trees">Appearance of trees</string>
    <string name="Grith">Girth of tree</string>
    <string name="height_of_tree">Height of tree</string>
    <string name="color">Color of fruit</string>
    <string name="size">Size of fruit</string>
    <string name="palm">Palm hygiene</string>
    <string name="plantation">Type of plantation</string>
    <string name="vehicle_type">Vehicle Type*</string>
    <string name="vehicle_typee">Vehicle Type</string>
    <string name="village_code">Village *</string>
    <string name="village_code_marketsur">Village</string>
    <string name="plot_number">Field Number *</string>
    <string name="farmer_first_name">Grower First Name *</string>
    <string name="farmercode">Grower Code *</string>
    <string name="farmer_middle_name">Grower Middle Name</string>
    <string name="farmer_last_name">Grower Last Name *</string>
    <string name="survey_number">Survey Number *</string>
    <string name="adangal_file_no">Adangal / File No</string>
    <string name="plot_area">Total Field Area (Ha) *</string>
    <string name="under_palm">Area suitable for oil palm(Ha)</string>
    <string name="area_left_out">Area Left out(Ha)</string>
    <string name="contract_mou">Contract / MOU No *</string>
    <string name="contract_date">Contract/ MOU Date *</string>
    <string name="land_mark">Land Mark *</string>
    <string name="active">Active*</string>
    <string name="gps_boundaries_of_the_plot">GPS Boundaries of the Plot</string>
    <string name="plot_area_as_per_gps">Field Area as per GPS</string>
    <string name="plot_difference">Field difference</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="palmDetails">Palm details</string>
    <string name="interCropDetails">Inter Crop Details</string>
    <string name="cropsGrowing_in_NeighboringPlot">Crops growing in neighbouring plot</string>
    <string name="ffbHarvestDetails">FFB Harvest Details</string>
    <string name="uprootmentDetails">Uprootment Details</string>
    <string name="cropMaintenance">Crop Maintenance</string>
    <string name="fertilizerApplication">Fertilizer Application</string>
    <string name="weedingDetails">Weeding Details</string>
    <string name="plantProtectionDetails">Plant Protection Details</string>
    <string name="diseaseDetails">Disease Details</string>
    <string name="pestDetails">Pest Details</string>
    <string name="healthOfPlantationDetails">Health of Plantation Details</string>
    <string name="complaintDetails">Complaint Details</string>
    <string name="plotCode">Field Code *</string>
    <string name="farmerName">Grower Name </string>
    <string name="crop">Crop *</string>
    <string name="neighbourPlot">Neighbour Field *</string>
    <string name="interCropYear">Inter Crop in Year </string>
    <string name="varietyType">Source Of Oil Palm *</string>
    <string name="areaAllocated">Area Allocated</string>
    <string name="countOfTrees_Saplingsplanted">Count of Trees /Saplings planted</string>
    <string name="yearOfPlanting">Year of Planting</string>
    <string name="cropBeforeOilPalm">Crop Before Oil Palm</string>
    <string name="status">Status</string>
    <string name="mainReasonForSwapping">Main reason for swapping to Oil Palm *</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="village_name_label">Village Name :</string>
    <string name="village_id_label">Village Code :</string>
    <string name="market_survey_date_hint">Market Survey Date</string>
    <string name="person_name_hint">Person Name</string>
    <string name="market_survey_number">Market Survey No</string>
    <string name="market_survey_date">Market Survey Date</string>
    <string name="cooking_oil_type_label">Cooking Oil Type</string>
    <string name="brand_label">Brand</string>
    <string name="quantity_consumed_label">Quantity  Consumed per Month(Ltr)</string>
    <string name="amount_paid">Amount paid for Oil per Month(Rs)</string>
    <string name="cattle_details">Cattle details</string>
    <string name="issue_details">Issue details</string>
    <string name="collection_centre_contractor_issues">Collection Centre Contractor Issues</string>
    <string name="vehicle_details">Vehicle details</string>
    <string name="do_you_own_vehicles">Do you own Vehicles ?</string>
    <string name="quantity_of_cattle">Quantity of Cattle ?</string>
    <string name="refferal_name">Referral Name</string>
    <string name="error_surveyNumber">Please enter the Survey Number</string>
    <string name="error_totalplotarea">Please enter the Total Field Area</string>
    <string name="error_totalplotarea_underpalm">Please enter the area under palm</string>
    <string name="error_mounumber">Please enter the Contract MOU No</string>
    <string name="error_moudate">Please enter the Contract MOU Date</string>
    <string name="error_family">Please enter family members</string>
    <string name="error_particular">Please enter the reason you have chosen this particular Oil</string>
    <string name="referrals">Referrals</string>
    <string name="referral_name">Referral Name</string>
    <string name="mobile_no">Mobile No</string>
    <string name="farmer_land_details">Grower Land Details</string>
    <string name="market_survey">Market Survey</string>
    <string name="plot_display">Field Display</string>
    <string name="refresh">Refresh Data</string>
    <string name="first_name">first name</string>
    <string name="middle_name">middle name</string>
    <string name="last_name">last name</string>
    <string name="Display_bank_name">Display bank name</string>
    <string name="digits">"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789-/., "</string>
    <string name="onlydigits">"0123456789"</string>
    <string name="aplhanumeric_type1">"ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789 "</string>
    <string name="gross_weight">"Gross weight(Kgs) *"</string>
    <string name="tare_weight">"Tare weight(Kgs) *"</string>
    <string name="net_weight">"Net weight(Kgs) *"</string>
    <string name="slip_picture">Picture of Weighment Slip *</string>
    <string name="number_of_bunches">Total No of Bunches</string>
    <string name="number_of_bunches_rejected">No. of bunches  (Rejected)</string>
    <string name="remarks">"Remarks"</string>
    <string name="grader_name">"Name of grader *"</string>
    <string name="fbb_grading">"FFB Grading"</string>
    <string name="generate_receipt">"Generate Receipt"</string>
    <string name="collection_centre_name">Collection Centre Name </string>
    <string name="collection_centre_code">Collection Centre Code </string>
    <string name="collection_centre_village">Collection Centre Village </string>
    <string name="no_of_bunches_accepted">No. of bunches (Accepted)</string>
    <string name="consignment_report">Consignment Report</string>
    <string name="collection_report">Fruit Collection Report</string>
    <string name="stock_transfer_report">Stock Transfer Report</string>
</resources>