<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:background="@drawable/rounded_background"
    android:orientation="vertical">
    <Button
        android:id="@+id/collection_report"
        style="@style/newmoduleBtnStyle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/collection_report"/>
    <Button
        android:id="@+id/consignment_report"
        style="@style/newmoduleBtnStyle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/consignment_report"/>

    <Button
        android:id="@+id/stockTransferRL"
        style="@style/newmoduleBtnStyle"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/stock_transfer_report"/>






</LinearLayout>

