<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".weighbridge.WeightCaliculationFragment">

    <include
        android:id="@+id/toolbar11"
        layout="@layout/toolbar2">

    </include>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"

        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:orientation="vertical">


                <LinearLayout
                    android:id="@+id/gross_weight_LL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_layout"

                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/gross_weight_title"
                        style="@style/header_h1_text_title"
                        android:layout_width="5dp"

                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="@string/gross_weight" />

                    <EditText
                        android:id="@+id/gross_weight"
                        style="@style/editTxt_normal"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:maxLength="10" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/tare_weight_LL"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_layout"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tare_weight_title"
                        style="@style/header_h1_text_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="@string/tare_weight" />

                    <EditText
                        android:id="@+id/tare_weight"
                        style="@style/editTxt_normal"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:maxLength="10" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_layout"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/net_weight_title"
                        style="@style/header_h1_text_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="@string/net_weight" />

                    <EditText
                        android:id="@+id/net_weight"
                        style="@style/editTxt_normal"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:textColor="#000000"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/netWeightTxt"
                        style="@style/textbasic_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:text=""
                        android:textColor="#000000" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_layout"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/weighbridge_slip_txt"
                        style="@style/header_h1_text_title"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:text="@string/slip_picture" />

                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/list_bg_pressed">

                        <ImageView
                            android:id="@+id/slip_icon"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignLeft="@+id/farmer_image"
                            android:layout_alignParentTop="true"
                            android:src="@mipmap/ico_btn_photo" />

                        <ImageView
                            android:id="@+id/slip_image"
                            android:layout_width="350dp"
                            android:layout_height="350dp"
                            android:layout_gravity="center"
                            android:layout_weight="1"
                            android:elevation="4dp"
                            android:scaleType="fitXY"
                            android:src="@mipmap/slip" />
                    </RelativeLayout>
                </LinearLayout>

                <TextView
                    style="@style/header_h1_text_title_with_background"
                    android:padding="10dp"
                    android:text="@string/fbb_grading" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="@color/colorPrimary" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_layout"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/header_h1_text_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:text="@string/number_of_bunches" />

                        <EditText
                            android:id="@+id/number_of_bunches"
                            style="@style/editTxt_normal"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:digits="@string/onlydigits"
                            android:inputType="number"
                            android:maxLength="6" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_layout"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/header_h1_text_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:text="@string/number_of_bunches_rejected" />

                        <EditText
                            android:id="@+id/number_of_bunches_rejected"
                            style="@style/editTxt_normal"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:digits="@string/onlydigits"
                            android:inputType="number"
                            android:maxLength="6" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_layout"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/header_h1_text_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:text="@string/no_of_bunches_accepted" />

                        <EditText
                            android:id="@+id/number_of_bunches_accepted"
                            style="@style/editTxt_normal"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:digits="@string/onlydigits"
                            android:enabled="false"
                            android:inputType="number"
                            android:maxLength="10"
                            android:textColor="@color/black" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_layout"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/header_h1_text_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:text="@string/remarks" />

                        <EditText
                            android:id="@+id/remarks"
                            style="@style/editTxt_normal"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:digits="@string/digits"
                            android:maxLength="150" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_top_layout"
                        android:orientation="horizontal">

                        <TextView
                            style="@style/header_h1_text_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:layout_weight="1"
                            android:text="@string/grader_name" />

                        <EditText
                            android:id="@+id/grader_name"
                            style="@style/editTxt_normal"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight="1"
                            android:digits="@string/aplhanumeric_type1"
                            android:maxLength="40" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/generateReceipt"
                        style="@style/basicBtnStyle"
                        android:layout_width="350dp"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/generate_receipt" />


                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>