<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/headearLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <!-- Collection Centre Name -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
               >

                <TextView
                    style="@style/header_h1_text_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/collection_centre_name" />

                <TextView
                    style="@style/header_h1_text_title_list_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:id="@+id/collection_center_name"

                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <!-- Collection Centre Code -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
            >

                <TextView
                    style="@style/header_h1_text_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/collection_centre_code" />

                <TextView
                    style="@style/header_h1_text_title_list_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:id="@+id/collection_center_code"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>

            <!-- Collection Centre Village -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
               >

                <TextView
                    style="@style/header_h1_text_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/collection_centre_village" />

                <TextView
                    style="@style/header_h1_text_title_list_item"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:id="@+id/collection_center_village"
                    android:layout_marginStart="10dp"/>
            </LinearLayout>
        </LinearLayout>

        <!-- QR Code Layout -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:id="@+id/layoutScan"
            android:orientation="vertical"
            android:padding="5dp"
            android:gravity="center"
            android:visibility="gone">

            <TextView
                style="@style/header_h1_text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="Search By QR Code" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:id="@+id/qrByFarmer"
                android:src="@drawable/qr_code"
                android:padding="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />
</LinearLayout>
